FIx site for new Gisto version

--- a/src/_pages/changelog.html
+++ b/src/_pages/changelog.html
@@ -17,6 +17,8 @@ permalink: /changelog/
     <h2>VERSIONS</h2>
     <nav>
         <ul>
+            <li><a class="innsite" href="#v19x">v1.9.x</a></li>
+            <li><a class="innsite" href="#v032">v0.3.2</a></li>
             <li><a class="innsite" href="#v031">v0.3.1</a></li>
             <li><a class="innsite" href="#v030">v0.3.0</a></li>
             <li><a class="innsite" href="#v026b">v0.2.6b</a></li>
@@ -33,6 +35,21 @@ permalink: /changelog/
 </div>
 
 <div class="w-col w-col-9 w-clearfix main">
+
+    <h2 id="v19x">1.9.x</h2>
+    <ul class="fa-ul">
+        <li class="icons-li"><i class="fa fa-chevron-circle-right"></i>
+            This version consist of a total rewrite of Gisto. Some features are still in a completion stage.
+        </li>
+    </ul>
+
+
+<h2 id="v032">0.3.2</h2>
+<ul class="fa-ul">
+    <li class="icons-li"><i class="fa fa-chevron-circle-right"></i> Due to recent Github changes in TLS policies, for now we provide runnable binaries installers for all the platform. Installers for all platform will be released through the regular channels soon after
+
+    </li>
+</ul>
 
 <h2 id="v031">0.3.1</h2>
     <ul class="fa-ul">
