--- a/src/_pages/features.html
+++ b/src/_pages/features.html
@@ -16,17 +16,6 @@ permalink: /features/
         <div class="w-row">
 
             <div class="w-col w-col-4 w-clearfix feat">
-                <img alt="Gisto" src="../images/Octocat.png"/>
-
-                <h3>GitHub Integration</h3>
-
-                <p>
-                    Gisto works using GitHub gists infrastructure, any change you make is automatically updated at
-                    GitHub.
-                </p>
-            </div>
-
-            <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/search.png" alt="Gisto"/>
 
                 <h3>Search</h3>
@@ -47,21 +36,23 @@ permalink: /features/
                 </p>
             </div>
 
+            <div class="w-col w-col-4 w-clearfix feat">
+                <img alt="Gisto" src="../images/edit.png"/>
+
+                <h3>Quick actions</h3>
+
+                <p>
+                    Gisto allows you to quickly download,copy and view your Gists on GitHub, in addition you
+                    can also generate embed links or view your Gists on plunkr, jsbin or jsfiddle.
+                </p>
+            </div>
+
         </div>
 
 
         <div class="w-row">
 
-            <div class="w-col w-col-4 w-clearfix feat">
-                <img alt="Gisto" src="../images/edit.png"/>
 
-                <h3>Quick Sharing</h3>
-
-                <p>
-                    Gisto allows you to quickly download,copy and view your Gists on GitHub, in addition you
-                    can also generate embed links or view your Gists on plunkr.
-                </p>
-            </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
                 <img alt="Gisto" src="../images/regular-and-enterprise-login.png"/>
@@ -69,7 +60,7 @@ permalink: /features/
                 <h3>Enterprise mode</h3>
 
                 <p>Enterprise mode in Gisto allows connecting to your GitHub enterprise (on-premise) instead of public
-                    github.</p>
+                    github <span class="text-danger">[coming soon]</span></p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -79,22 +70,22 @@ permalink: /features/
 
                 <p>Gisto supports drag and drop support for your files, you can drop files or directories into existing
                     or new gists alike
-                    to add new files to gists.</p>
+                    to add new files to gists <span class="text-danger">[coming soon]</span></p>
+            </div>
+
+            <div class="w-col w-col-4 w-clearfix feat">
+                <img src="../images/themes.png" alt="Gisto"/>
+
+                <h3>Color SWITCHING</h3>
+
+                <p>You can chose app color via the settings menu. Any color can be used as a base collor for Gisto</p>
+
             </div>
 
         </div>
 
 
         <div class="w-row">
-
-            <div class="w-col w-col-4 w-clearfix feat">
-                <img src="../images/themes.png" alt="Gisto"/>
-
-                <h3>Color themes</h3>
-
-                <p>Several color themes are available with both dark and light flavors.</p>
-
-            </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/revisions.png" alt="Gisto"/>
@@ -104,22 +95,17 @@ permalink: /features/
                 <p>
                     The revision browser enables you to see all previous changes to the gist as well as change
                     statistics and
-                    viewing the revision as it were at that time.
+                    viewing the revision as it were at that time  <span class="text-danger">[coming soon]</span>
                 </p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
-                <img src="../images/ace.png" alt="Gisto"/>
+                <img src="../images/monaco.png" alt="Gisto"/>
 
                 <h3>Rich editor</h3>
 
-                <p>Thanks to <a href="http://ace.c9.io/">ACE</a> editor you can edit Gists using a rich code editor
-                    featuring syntax highlighting, auto-completion, emmet and more.</p>
+                <p>Gisto includes open-source <a href="https://microsoft.github.io/monaco-editor/">monaco editor</a>. A rich code editor for editing your Gists and includes features such as syntax highlighting auto-completion emmet and more.</p>
             </div>
-
-        </div>
-
-        <div class="w-row">
 
             <div class="w-col w-col-4 w-clearfix feat">
                 <img src="../images/QWERTY_keyboard.jpg" alt="Gisto"/>
@@ -127,17 +113,6 @@ permalink: /features/
                 <h3>Keyboard shortcuts</h3>
 
                 <p>Gisto also has a variety of keyboard shortcuts, just press <code>?</code> to view them.</p>
-            </div>
-
-            <div class="w-col w-col-4 w-clearfix feat">
-                <img src="../images/share.png" alt="Gisto"/>
-
-                <h3>Sharing gists</h3>
-
-                <p>You can send and receive Gists between Gisto users very easily, all you need is the recipient GitHub
-                    username.</p>
-
-                <p>The recipient will receive a notification and will be able to fork the gist if he wishes.</p>
             </div>
 
         </div>
