--- a/src/_pages/features.html
+++ b/src/_pages/features.html
@@ -70,7 +70,7 @@ permalink: /features/
 
                 <p>Gisto supports drag and drop support for your files, you can drop files or directories into existing
                     or new gists alike
-                    to add new files to gists <span class="text-danger">[coming soon]</span></p>
+                    to add new files to gists</p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
