--- a/src/_pages/features.html
+++ b/src/_pages/features.html
@@ -60,7 +60,7 @@ permalink: /features/
                 <h3>Enterprise mode</h3>
 
                 <p>Enterprise mode in Gisto allows connecting to your GitHub enterprise (on-premise) instead of public
-                    github <span class="text-danger">[coming soon]</span></p>
+                    github</p>
             </div>
 
             <div class="w-col w-col-4 w-clearfix feat">
@@ -95,7 +95,7 @@ permalink: /features/
                 <p>
                     The revision browser enables you to see all previous changes to the gist as well as change
                     statistics and
-                    viewing the revision as it were at that time  <span class="text-danger">[coming soon]</span>
+                    viewing the revision as it were at that time
                 </p>
             </div>
 
