--- a/src/_pages/download.html
+++ b/src/_pages/download.html
@@ -13,119 +13,4 @@ permalink: /download/
 
 <h1>Download</h1>
 
-<section class="whiter boxes">
-
-    <div class="w-container content-container">
-        <div class="w-row">
-
-            <div class="w-col w-col-3 w-clearfix side-container">
-
-                <h2>NAV</h2>
-                <nav>
-                    <ul>
-                        <li><a class="innsite" href="#release">Download</a></li>
-                        <li><a class="innsite" href="#mirror">Mirror</a></li>
-                        <li><a class="innsite" href="#nightly">Nightly builds</a></li>
-                        <li><a class="innsite" href="#other">Other install options</a></li>
-                        <li><a class="innsite" href="#prevs">Previous versions</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="w-col w-col-9 w-clearfix">
-
-                <div class="w-row" id="release">
-
-                    <div class="download w-col w-col-4 w-clearfix txt-center">
-                        <p class="txt-center"><i class="fa fa-windows fa-4x"></i></p>
-                        <h3>Windows<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Win_x86_64.zip"><b>64</b>BIT</a>
-                    </div>
-
-                    <div class="download w-col w-col-4 w-clearfix txt-center">
-                        <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
-                        <h3>OSX<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
-                    </div>
-
-                    <div class="download w-col w-col-4 w-clearfix txt-center">
-                        <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
-                        <h3>Linux 64bit<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"><b>32</b>BIT</a> | <a href="{{ site.download_url }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"><b>64</b>BIT</a>
-                    </div>
-
-
-                </div>
-
-
-                <h2 id="mirror" class="txt-center">Mirror</h2>
-
-                <h3 class="txt-center">Download <b>{{ current_version }}</b> from mirror</h3>
-
-                <div class="w-row">
-
-                    <div class="download w-col w-col-4 w-clearfix txt-center">
-                        <p class="txt-center"><i class="fa fa-windows fa-4x"></i></p>
-                        <h3>Windows<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Win_x86.zip"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Win_x86_64.zip"><b>64</b>BIT</a>
-                    </div>
-
-                    <div class="download w-col w-col-4 w-clearfix txt-center">
-                        <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
-                        <h3>OSX<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-OSX_x86_64.dmg"><b>64</b>BIT</a>
-                    </div>
-
-                    <div class="download w-col w-col-4 w-clearfix txt-center">
-                        <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
-                        <h3>Linux 64bit<br/> <b>Download</b></h3>
-                        <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86.tar.gz"><b>32</b>BIT</a> | <a href="{{ site.download_url_mirror }}/Gisto-{{ current_version }}-Linux_x86_64.tar.gz"><b>64</b>BIT</a>
-                    </div>
-
-
-                </div>
-
-                <h2 id="nightly">"Nightly" builds</h2>
-
-                <p>Gisto "nightly" builds are automatic builds triggered by commits to "master" branch.</p>
-
-                <blockquote>Please note that these are not stable releases. <br>Bugs are possible. Those builds lacks the usual installers you may get in the regular releases.</blockquote>
-
-                <p>"Nightly" builds for all platforms are available at: <a href="{{ site.nightly_url }}">build.gistoapp.com</a></p>
-
-
-                        <h2 id="other">Other install options:</h2>
-
-                        <p>via <b>Homebrew cask</b>:
-                        <pre><span>SHELL</span>$ brew cask install gisto</pre>
-                        </p>
-                        <p>via <b>Archlinux AUR</b>:
-                        <pre><span>SHELL</span>$ yaourt -S gisto</pre>
-                        </p>
-                        <p>via <b>SlackBuilds.org (Slackware)</b>:
-                        <pre><span>SHELL</span># sbopkg -i gisto</pre>
-                        </p>
-
-
-                <h2 id="prevs">Previous versions</h2>
-
-                {% for v in site.releases %}
-                    {% if forloop.first %}
-                <!-- current version don't need to be here -->
-                {% else %}
-                    <h3>Verison {{ v.version }}</h3>
-                <p><i class="fa fa-windows"></i> <a href="{{ site.download_url_mirror }}/Gisto-{{ v.version }}-Win_x86.zip">Download for Windows</a></p>
-                <p><i class="fa fa-apple"></i> <a href="{{ site.download_url_mirror }}/Gisto-{{ v.version }}-OSX_x86.dmg">Download for OSX</a></p>
-                <p><i class="fa fa-linux"></i> <a href="{{ site.download_url_mirror }}/Gisto-{{ v.version }}-Linux_x86.tar.gz">Download for Linux 32bit</a></p>
-                <p><i class="fa fa-linux"></i> <a href="{{ site.download_url_mirror }}/Gisto-{{ v.version }}-Linux_x86_64.tar.gz">Download for Linux 64bit</a></p>
-
-                {% endif %}
-                {% endfor %}
-
-
-            </div>
-
-        </div>
-    </div>
-
-</section>
+{% include downloads.html %}
